
cmake_minimum_required ( VERSION 2.6 )

# project ( rtttlConvert C )

# include_directories ( src )
# add_subdirectory ( src )

# file( GLOB SOURCES src/*.c )

# SET_TARGET_PROPERTIES ( ${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE C )

# add_executable( rtttlConvert tutorial.cxx )
# add_executable( ${PROJECT_NAME} src )

add_executable( rtttlConvert src/main.c )
